--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -299,49 +299,42 @@ En orsak till att vistelsetiden ökade stadigt för de som blev godkända från 
 gg_SFI$sfi_vistelsetid_tidsserie_Dalarna
 ```
 
-Från 1 januari 2025 har kraven på att delta i SFI skärpts. Deltagande är bl a begränsat till tre år och en individuell studieplan ska upprättas i samband med antagning. Om genomströmningstiderna som rådde under 2023 inte förkortas skulle det kunna innebära att många elever inte skulle nå godkänt inom utsatt tid. Särskilt utmanande är tidsfristen för gruppen med förgymnasial utbildning som under perioden 2021-2023 i genomsnitt tog nästan dubbelt så lång tid på sig som de nya reglerna kräver.
+Från 1 januari 2025 har kraven på att delta i SFI skärpts. Deltagande är bl a begränsat till tre år och en individuell studieplan ska upprättas i samband med antagning. Det innebär att genomströmningstiderna behöver återgå till den nivå som rådde innan pandemin. 
 
 ## Utbildning
-En fullgjord gymnasieutbildning är en av de viktigaste faktorerna för ett gott liv på många sätt, såsom hälsa, inkomst, medellivslängd och möjligheten till arbete. De med en högre utbildning lever i allmänhet längre, har en genomsnittligt högre inkomst och mår i allmänhet bättre än de med lägre utbildning. Utbildningsnivån hos utrikes födda har därför en stor påverkan på möjligheterna att etablera sig i samhället, särskilt bland de unga som anländer till Sverige under skolåren och har hela arbetslivet framför sig.
+En fullgjord gymnasieutbildning är en av de viktigaste faktorerna för ett gott liv på många sätt, såsom hälsa, inkomst, medellivslängd och möjligheten till arbete. De med en högre utbildning lever i allmänhet längre, har en genomsnittligt högre inkomst och mår i allmänhet bättre än de med lägre utbildning. Utbildningsnivån hos utrikes födda har därför en stor påverkan på möjligheterna att etablera sig i samhället, särskilt bland de unga som anländer till Sverige under skolåren och har hela arbetslivet framför sig. Idag behövs det enligt Arbetsförmedlingen i regel gymnasiekompetens för att ha en god chans att etablera sig på arbetsmarknaden, även när det gäller bristyrken. 
 
 Att gruppen utrikes födda är en heterogen grupp blir tydligt när utbildningsnivån studeras (se diagram nedan). Den stora skillnaden mellan utrikes och inrikes födda är att en större andel av de utrikes födda har en förgymnasial utbildning, och en mindre andel gymnasial utbildning. Andelen personer som har eftergymnasial utbildning är ungefär densamma för inrikes och utrikes födda. Det är en lite högre andel kvinnor födda i Sverige med eftergymnasial utbildning än utrikes födda, men bland män är förhållandet det omvända.  Arbetskraftsinvandrare är generellt sett mer högutbildade än flyktinginvandrare, och skillnaderna i utbildningsnivå är även stora mellan olika ursprungsländer.
-
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 
 gg_utbniva_bakgrund$utbniva_inr_utr_kon_Dalarna_ar2023
 
 ```
-<span class = "kommentar">Justera diagramförklaring ovan till inrikes och utrikes födda? Är ett diagramskript som sannolikt används på flera andra ställen, svårt att ändra.</span>
 <br>
 
-Eftersom det finns stora skillnader i utbildningsbakgrund bland utrikes födda, är det svårt att tala om dem som en samlad grupp. Personer med låg- och hög utbildning stöter på olika typer av utmaningar på arbetsmarknaden.
+Eftersom det finns stora skillnader i utbildningsbakgrund bland utrikes födda, är det svårt att tala om dem som en samlad grupp. Personer med låg och hög utbildning stöter på olika typer av utmaningar på arbetsmarknaden.
 
-En förhållandevis stor andel av de utrikes födda i Dalarna hade år 2024 en eftergymnasial utbildning om minst 3 år. Högst utbildning hade de som relativt nyligen invandrat till Sverige, vilket är en indikation på att en större andel av dessa är arbetskraftsinvandrare. Exempelvis har ungefär `r utb_niva_vistelsetid_2_3_eftergym` procent av de som invandrade till Sverige mellan 2021 och 2021 (2-3 år i diagrammet nedan) och nu bor i Dalarna en eftergymnasial utbildning om minst tre år, vilket är klart fler än motsvarande andel bland inrikes födda. Bland övriga utbildningsnivåer ökar andelen med gymnasial utbildning tydligt ju längre tid som gått sedan invandringen. Störst andel med förgymnasial utbildning finns bland de som invandrat mellan 2015 och 2020 (4-9 år i diagrammet nedan).
-
-Viktigt att notera är även att det saknas uppgifter om utbildningsnivå för en stor andel av de utrikes födda, speciellt för de som varit en kortare tid i landet. 
+En förhållandevis stor andel av de utrikes födda i Dalarna hade år 2024 en eftergymnasial utbildning om minst 3 år. Högst utbildning hade de som relativt nyligen invandrat till Sverige, vilket är en indikation på att en större andel av dessa är arbetskraftsinvandrare. Exempelvis har ungefär `r utb_niva_vistelsetid_2_3_eftergym` procent av de som invandrade till Sverige mellan 2021 och 2022 (2-3 år i diagrammet nedan) och nu bor i Dalarna en eftergymnasial utbildning om minst tre år, vilket är klart fler än motsvarande andel bland inrikes födda. Bland övriga utbildningsnivåer ökar andelen med gymnasial utbildning tydligt ju längre tid som gått sedan invandringen. Störst andel med förgymnasial utbildning finns bland de som invandrat mellan 2015 och 2020 (4-9 år i diagrammet nedan).
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 gg_utb_niva_invandringsar$utb_niva_invandringsar
 ```
+<br>
 
-*Diagram 2 - Vistelsetid, utbildningsnivå och inträde på arbetsmarknaden*
+Viktigt att notera är även att det saknas uppgifter om utbildningsnivå för en stor andel av de utrikes födda, speciellt för de som varit en kortare tid i landet. 
 
-Idag behövs det enligt Arbetsförmedlingen i regel gymnasiekompetens för att ha en god chans att etablera sig på arbetsmarknaden, även när det gäller bristyrken. 
+<span class = "kommentar">*De tre styckena nedan har ingen ren koppling till utbildningsnivåer eller diagrammet ovan - flytta till delar där det finns arbetsmarknadskoppling*</span>
 
-Diagrammet ovan visar att vistelsetid i landet och utbildningsbakgrund i stor utsträckning påverkar hur stor andel personer som är sysselsatta. Generellt sett så har utrikes födda personer med låg utbildning svårare att etablera sig på arbetsmarknaden än de med gymnasieutbildning eller högre utbildning. En bidragande faktor kan vara att det finns få enkla jobb på den svenska arbetsmarknaden som inte kräver längre utbildning. År 2016 utgjordes 5 % av den förvärvsarbetande arbetskraften av yrken utan eller med kortare krav på utbildning och introduktion, vilket var lägst andel i hela EU. För att möjliggöra att fler av de utrikes födda som flyttat till Dalarna de senaste åren ska arbeta, är det av största vikt att så många som möjligt tillgodogör sig en utbildning som efterfrågas av arbetsmarknaden.
+Diagrammet ovan visar att vistelsetid i landet och utbildningsbakgrund i stor utsträckning påverkar hur stor andel personer som är sysselsatta. Generellt sett så har utrikes födda personer med låg utbildning svårare att etablera sig på arbetsmarknaden än de med gymnasieutbildning eller högre utbildning. En bidragande faktor kan vara att det finns få enkla jobb på den svenska arbetsmarknaden som inte kräver längre utbildning. För att möjliggöra att fler av de utrikes födda som flyttar till Dalarna ska arbeta, är det av största vikt att så många som möjligt tillgodogör sig en utbildning som efterfrågas av arbetsmarknaden.
 
-Det finns flera tänkbara anledningar till att utrikes födda i genomsnitt presterar sämre på arbetsmarknaden, även när hänsyn tas till skillnader i utbildningsnivå. Några tänkbara förklaringar kan exempelvis vara lägre kunskapar om landet, språket och kulturen. För de som flyttat till Sverige av flyktingskäl kan traumatiska upplevelser också inverka. I både Sverige och övriga västvärlden finns det emellertid gott om indikationer på att diskriminering av personer med utländskt ursprung förekommer på arbetsmarknaden. En sak som pekar på detta är att de som är födda i Sverige med utrikes födda föräldrar presterar sämre på arbetsmarknaden än de med svensk bakgrund, även när hänsyn tas till skillnader i utbildningsnivå. Det är teoretiskt möjligt att andra faktorer kan påverka utfallet, men det förefaller föga troligt att skillnaderna skulle vara stora, utan att diskriminering förekommer i någon form. 
+Det finns flera tänkbara anledningar till att utrikes födda i genomsnitt presterar sämre på arbetsmarknaden, även när hänsyn tas till skillnader i utbildningsnivå. Några tänkbara förklaringar kan exempelvis vara lägre kunskapar om landet, språket och kulturen. För de som flyttat till Sverige av flyktingskäl kan traumatiska upplevelser också inverka. Det finns emellertid rapporter som visar att diskriminering av personer med utländskt ursprung förekommer på arbetsmarknaden [(Länsstyrelsen Stockholm, 2018)](https://www.diva-portal.org/smash/get/diva2:1273400/FULLTEXT01.pdf){target="_blank"}^[Länsstyrelsen Stockholm, 2018. Antisvart rasism och diskriminering på arbetsmarknaden, Rapport 2018.21.]. Utrikes födda män förefaller vara mer utsatta inom yrken där det finns många inrikes födda [(Bursell, M. och Bygren, M., 2023)](https://www.ifau.se/globalassets/pdf/se/2023/2023-10-etnisk-yrkessegregering-pa-arbetsmarknaden--har-diskriminering-nagon-betydelse.pdf){target="_blank"}^[Bursell, M. och Bygren, M., 2023. Etnisk yrkessegregering på arbetsmarknaden – har diskriminering någon betydelse?, Rapport 2023.10, IFAU.].
 
-Det finns emellertid empiriskt stöd för att diskriminering på arbetsmarknaden verkligen förekommer. Flera svenska studier har undersökt frågan genom att skicka fiktiva ansökningar med påhittade personer till ett stort antal utlysta jobb. Resultatet av studierna har varit att personer med mer svenskklingande namn har betydligt större sannolikhet att bli kallad till en arbetsintervju än personer med ett utländskt klingande namn, trots att ansökningarna i övrigt är i stort sett identiska. De ekonomiska vinsterna för samhället skulle vara stora om skillnaderna i sysselsättning och medelinkomst, mellan inrikes och utrikes födda skulle utjämnas. I den mån diskriminering förklarar denna skillnad, finns det alltså stora vinster i att bekämpa den, både för samhället och för de utrikes födda själva.
+De ekonomiska vinsterna för samhället skulle vara stora om skillnaderna i sysselsättning och medelinkomst, mellan inrikes och utrikes födda skulle utjämnas. I den mån diskriminering förklarar denna skillnad, finns det alltså stora vinster i att bekämpa den, både för samhället och för de utrikes födda själva.
 
-<span class = "kommentar">Är ovanstående fortsatt relevant? Senare forskning på området?</span>
+<span class = "kommentar">*De tre styckena ovan har ingen ren koppling till utbildningsavsnittet - flytta till delar där det finns arbetsmarknadskoppling*</span>
 
-Eftersom en gymnasieutbildning förbättrar möjligheten att etablera sig på arbetsmarknaden, är en viktig aspekt att undersöka hur stor andel av avgångseleverna i årskurs 9 i länet som är behöriga till att påbörja gymnasiestudier. Ofullständiga eller låga betyg är i första hand ett problem för den enskilde, då personens valmöjligheter begränsas och etableringen på arbetsmarknaden försvåras. Att en stor andel elever inte blir behöriga till gymnasiet kan även innebära ett samhällsproblem. Samhället misslyckas med att ta tillvara på elevernas potential om de inte når målen för utbildningen i skolan. Det finns även ett starkt samband mellan dåliga skolresultat och sociala problem. Enligt Socialstyrelsen är det 8 gånger större risk att varken arbeta eller studera för den som överhuvudtaget inte påbörjat gymnasiet, jämfört med en elev som har genomfört ett studieförberedande gymnasieprogram. Det finns även en stark överrisk att varken arbeta eller studera för den som har hoppat av gymnasiet, jämfört med den som har fullföljt en gymnasieutbildning.
-
-<span class = "kommentar">Är ovanstående fortsatt gällande?</span>
-
-<span class = "kommentar">Kontrollera text hit</span>
+Eftersom en gymnasieutbildning förbättrar möjligheten att etablera sig på arbetsmarknaden, är en viktig aspekt att undersöka hur stor andel av avgångseleverna i årskurs 9 i länet som är behöriga till att påbörja gymnasiestudier. Ofullständiga eller låga betyg är i första hand ett problem för den enskilde, då personens valmöjligheter begränsas och etableringen på arbetsmarknaden försvåras. Att en stor andel elever inte blir behöriga till gymnasiet kan även innebära ett samhällsproblem. Samhället misslyckas med att ta tillvara på elevernas potential om de inte når målen för utbildningen i skolan. Det finns även ett starkt samband mellan dåliga skolresultat och sociala problem [(Westin Lundqvist, W. m fl, 2019)](https://www.hv.se/contentassets/82eff73069584573b03f43956b661c05/laga-skolresultat-i-socialt-utsatta-omraden_.pdf){target="_blank"}^[Westin Lundqvist, W., Assmo, P. och Sunnemark, F., 2019. Låga skolresultat i socialt utsatta områden, Högskolan i Väst.]. 
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 
